test/fail/classes/private_outside_scope.lily
#[
SyntaxError: abc.f is marked private, and not available here.
    from private_outside_scope.lily:12:
]#

class abc {
    private define f { }
}

class def < abc {
    abc.f()
}
